# tasktorrent

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Dockerfile  tests.yml
Makefile.conf-examples/: Makefile.mac  Makefile.shared.travis  Makefile.sherlock
cholesky/: Makefile  ttor_shared.cpp
cmake/: AddGoogleTest.cmake  CMakeLists.gtest.txt  FindEigen3.cmake
docs/: .gitignore  Doxyfile  conf.py  distributed.rst  index.rst  shared.rst  utility.rst
miniapp/: Makefile  Makefile.conf.armstrong  Makefile.conf.github  Makefile.conf.mac  Makefile.conf.shepard  Makefile.conf.travis  run.sh  utils_shared.hpp
miniapp/3d_gemm/: 2d_gemm.cpp  3d_gemm.cpp  Makefile  Makefile.conf.armstrong  Makefile.conf.mac  Makefile.conf.shepard  Makefile.conf.travis  driver_gemm.sh  gemm_shared.hpp  run_gemm_2d.sh  run_gemm_3d.sh
miniapp/3d_gemm/concurrency_plot/: driver_gemm_effvsconc.sh  run_gemm_2d_effvsconc.sh  time_to_eff.py  time_to_eff.sh
miniapp/dense_cholesky/: 2d_cholesky.cpp  3d_cholesky.cpp  Makefile  Makefile.conf.armstrong  Makefile.conf.mac  Makefile.conf.travis  cholesky.cpp  driver_cholesky.sh  driver_cholesky_random.sh  driver_run_many.sh  run_cholesky.sh  run_many.sh
miniapp/gemm/: 2d_gemm.cpp  3d_gemm.cpp  Makefile  gemm_shared.hpp  run_gemm_2d.sh  run_gemm_3d.sh
miniapp/mini_benchmarks/: Makefile  Makefile.conf.mac  Makefile.conf.shepard  Makefile.conf.travis  common.hpp  micro_cholesky.cpp  micro_deps.cpp  micro_wait.cpp  mini_benchmarks.cpp  no_deps_benchmarks.py  shared_benchmarks.sh
miniapp/mini_benchmarks/mpi/: Makefile  starpu_deps_stf_mpi.cpp  ttor_deps_mpi.cpp
miniapp/mini_benchmarks/shared/: Makefile  Makefile.conf.armstrong  deps_benchmarks.py  deps_comp_benchmarks.py  micro_deps.cpp  micro_wait.cpp  omp_wait.cpp  run.slurm  starpu_deps.cpp  starpu_deps_stf.cpp  starpu_wait.cpp  starpu_wait_stf.cpp  ttor_cholesky.cpp  ttor_deps.cpp  ttor_wait.cpp  wait_benchmarks.py  wait_comp_benchmarks.py
miniapp/sparse_cholesky/: Makefile  Makefile.conf.armstrong  Makefile.conf.mac  Makefile.conf.travis  driver_sparse_cholesky.sh  mmio.hpp  neglapl_2_32.mm  run_sparse_cholesky.sh  snchol.cpp  test_dmfchol.cpp
src/: CMakeLists.txt  apply_functions.hpp  communications.cpp  communications.hpp  functional_extra.hpp  runtime.hpp  serialization.cpp  serialization.hpp  tasktorrent.hpp  util.cpp  util.hpp  views.hpp
tasktorrent/: tasktorrent.hpp
tasktorrent/src/: CMakeLists.txt  active_messages.cpp  active_messages.hpp  activemessage.cpp  activemessage.hpp  apply_functions.hpp  communications.cpp  communications.hpp  communications_extra.cpp  communications_extra.hpp  communications_mpi.cpp  communications_mpi.hpp  communications_upcxx.cpp  communications_upcxx.hpp  functional_extra.hpp  hashes.hpp  message.cpp  message.hpp  mpi_utils.cpp  mpi_utils.hpp  serialization.hpp  taskflow.hpp  tasks.cpp  tasks.hpp  threadpool_dist.cpp  threadpool_dist.hpp  threadpool_mpi.cpp  threadpool_mpi.hpp  threadpool_shared.cpp  threadpool_shared.hpp  util.cpp  util.hpp  util_templates.hpp  views.hpp
tests/: .gitignore  test_all.sh  test_github.sh  test_travis.sh
tests/distributed/: CMakeLists.txt  run_tests.sh  tests_active_msg.cpp  tests_active_msg_mpi.cpp  tests_cholesky.cpp  tests_communicator.cpp  tests_completion.cpp  tests_ddot.cpp  tests_mpi.cpp  tests_random_graph.cpp
tests/mpi/: CMakeLists.txt  Makefile  Makefile.conf  cholesky.cpp  ddot_test.cpp  random_graph_test.cpp  run_tests.sh  run_tests_many_iterations.sh  run_tests_travis.sh  test_mini.sh  tests_active_msg_large.cpp  tests_comms_internals.cpp  tests_communicator.cpp  tests_completion.cpp
tests/shared/: CMakeLists.txt  Makefile  run_tests.sh  run_tests_travis.sh  tests.cpp  tests_serialize.cpp
tools/: .gitignore  README.md  animate_dag.py  dep_graph.py  plot_dag.py  plot_traces.py  profiler.py  profiler_server.py  serve_traces.py  ttor_logging.py  ttor_shared_200_20.log (2).0
tutorial/: .gitignore  Makefile  MultiLapack.cpp  cholesky.cpp  encapsulate.cpp  ttor_distri.cpp  tuto.cpp  tuto_large_am.cpp
