include_directories("../../src/")
include_directories(${MPI_INCLUDE_PATH})
include_directories(${EIGEN_INCLUDE_DIRS})

foreach (test tests_completion cholesky ddot_test tests_comms_internals tests_communicator)
    add_executable(${test} ${test}.cpp)
    target_link_libraries(${test} PRIVATE TaskTorrent)
    target_link_libraries(${test} PRIVATE ${MPI_LIBRARIES})
    if(MPI_COMPILE_FLAGS)
      set_target_properties(${test} PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
    endif()
    if(MPI_LINK_FLAGS)
      set_target_properties(${test} PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
    endif()
    add_gtest(${test})
endforeach()
